Add eventconvert logic.

--- a/JSONConverters.xcodeproj/xcshareddata/xcschemes/eventconvert.xcscheme
+++ b/JSONConverters.xcodeproj/xcshareddata/xcschemes/eventconvert.xcscheme
@@ -56,6 +56,12 @@
             ReferencedContainer = "container:JSONConverters.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "$PROJECT_DIR/SampleData/session_54289_eventtrack.plist"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
